Solve the native-image issue for getting DNS server lists